# Signal-FTS5-Extension

./: Cargo.toml  cbindgen.toml
generate-header/: main.rs
src/: extension.rs  lib.rs
