#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-tokenizer"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
lto = true

[dependencies]
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.22"
cbindgen = { version = "=0.28.0", optional = true, default-features = false }

# libc without `std`
libc = { version = "0.2", "default-features" = false, features = [] }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
extension = []
cbindgen = ["dep:cbindgen"]

[[bin]]
name = "generate-header"
required-features = ["cbindgen"]
path = "generate-header/main.rs"

[[bench]]
name = "tokenizer"
harness = false

[workspace]