#
# Copyright (C) 2023 Signal Messenger, LLC.
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "signal-tokenizer"
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[profile.release]
lto = true

[dependencies]
unicode-segmentation = "=1.10.1"
unicode-normalization = "=0.1.22"
cbindgen = { version = "=0.28.0", optional = true, default-features = false }

# libc without `std`
libc = { version = "=0.2.172", "default-features" = false, features = [] }

# reviewed sub-dependencies of cbindgen
bitflags = "=2.6.0"
unicode-ident = "=1.0.12"
cfg-if = "=1.0.0"
fastrand = "=2.3.0"
serde_spanned = "=0.6.8"
toml = "=0.8.22"
tempfile = "=3.20.0"

# sub-dependencies of cbindgen forced to match tuta-sdk's and node-mimimi version
hashbrown = { version = "=0.15.3", default-features = false }
equivalent = "=1.0.2"
indexmap = "=2.9.0"
itoa = "=1.0.15"
log = "=0.4.27"
memchr = "=2.7.4"
once_cell = "=1.21.3"
quote = "=1.0.40"
ryu = "=1.0.20"
serde_derive = "=1.0.219"
serde_json = "=1.0.140"
serde = "=1.0.219"
syn = "=2.0.101"
toml_datetime = "=0.6.9"
toml_edit = "=0.22.26"
winnow = "=0.7.10"
rustix = "=1.0.7"
heck = "=0.5.0"
proc-macro2 = "=1.0.95"
linux-raw-sys = "=0.9.4"

#[dev-dependencies]
#criterion = "0.5"

[features]
default = []
extension = []
cbindgen = ["dep:cbindgen"]

[[bin]]
name = "generate-header"
required-features = ["cbindgen"]
path = "generate-header/main.rs"

#[[bench]]
#name = "tokenizer"
#harness = false

[workspace]
